<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:background="@color/azulFuerte"
        android:textColor="@color/white"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/ic_baseline_person_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/apellido"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            android:background="@color/gris"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/apellido"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            android:background="@color/gris"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:layout_weight="1"
        android:background="@color/gris"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/contrasenia"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"/>

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:layout_weight="1"
        android:background="@color/gris"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/telefono"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"/>

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:layout_weight="1"
        android:background="@color/gris"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:text="@string/registrar" />

</LinearLayout>